[tool.poetry]
name = "LLM Generator"
version = "0.0.1"
description = "TODO"
readme = "README.md"

authors = ["Christopher Cervantes <cmcervantes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.0.0"
torch = ">=2.1.2"
bitsandbytes = "^0.42.0"
datasets = "^2.16.0"
accelerate = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"